0.7.0/_sources/gallery/3D_vectors_through_time.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/3D_vectors_through_time.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        :ref:`Go to the end <sphx_glr_download_gallery_3D_vectors_through_time.py>`
        to download the full example as a Python script or as a
        Jupyter notebook..

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_3D_vectors_through_time.py:


3D vector field and image across time
=====================================

This example is from a mechanical test on a granular material, where multiple 3D volume have been acquired using x-ray tomography during axial loading.
We have used [`spam`](https://www.spam-project.dev/) to label individual particles (with watershed and some tidying up manually), and these particles are tracked through time with 3D "discrete" volume correlation *incrementally*:
t0 → t1 and then t1 → t2.
Although we're also measuring rotations (and strains), but here we're interested to visualise the displacement field on top of the image to spot tracking errors.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 12-19

.. code-block:: Python


    import numpy as np
    import pooch
    import tifffile

    import napari








.. GENERATED FROM PYTHON SOURCE LINES 20-29

Input data
-----------

Input data are therefore:
  - A series of 3D greyscale images
  - A series of measured transformations between subsequent pairs of images
  - We also have consistent labels through time which could also be visualised but are not here

Let's download it!

.. GENERATED FROM PYTHON SOURCE LINES 29-50

.. code-block:: Python


    grey_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/grey.zip",
        known_hash="md5:760be2bad68366872111410776563760",
        processor=pooch.Unzip(),
        progressbar=True
    ))

    # Load individual 3D images as a 4D with a list comprehension, skipping last one
    # result is a T, Z, Y, X 16-bit array
    greys = np.array([tifffile.imread(grey_file) for grey_file in grey_files[0:-1]])

    # load incremental TSV tracking files from spam-ddic, [::2] is to skip VTK files also in folder
    tracking_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/ddic.zip",
        known_hash="md5:2d7c6a052f53b4a827ff4e4585644fac",
        processor=pooch.Unzip(),
        progressbar=True
    ))[::2]






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading...
    From (original): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ
    From (redirected): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ&confirm=t&uuid=07d17592-77f8-4f71-a617-772934382237
    To: /home/runner/work/docs/docs/.cache/pooch/tmpx4w3ffx3
      0%|          | 0.00/549M [00:00<?, ?B/s]      0%|          | 1.05M/549M [00:00<01:00, 9.09MB/s]      1%|          | 6.82M/549M [00:00<00:15, 34.5MB/s]      2%|▏         | 11.0M/549M [00:00<00:20, 26.4MB/s]      3%|▎         | 15.2M/549M [00:00<00:17, 30.5MB/s]      3%|▎         | 18.9M/549M [00:00<00:24, 21.8MB/s]      4%|▍         | 23.6M/549M [00:01<00:24, 21.2MB/s]      6%|▌         | 32.0M/549M [00:01<00:23, 21.7MB/s]      7%|▋         | 40.4M/549M [00:01<00:16, 29.9MB/s]      8%|▊         | 44.6M/549M [00:01<00:16, 30.5MB/s]     10%|▉         | 52.4M/549M [00:01<00:12, 39.6MB/s]     11%|█         | 57.7M/549M [00:02<00:15, 31.6MB/s]     12%|█▏        | 63.4M/549M [00:02<00:16, 29.7MB/s]     13%|█▎        | 73.9M/549M [00:02<00:13, 36.3MB/s]     15%|█▍        | 80.2M/549M [00:02<00:11, 40.7MB/s]     16%|█▌        | 86.5M/549M [00:02<00:11, 41.5MB/s]     17%|█▋        | 91.2M/549M [00:02<00:11, 38.5MB/s]     18%|█▊        | 99.6M/549M [00:02<00:09, 47.9MB/s]     19%|█▉        | 105M/549M [00:03<00:09, 44.6MB/s]      20%|██        | 111M/549M [00:03<00:09, 44.4MB/s]     21%|██        | 116M/549M [00:03<00:14, 29.1MB/s]     24%|██▍       | 131M/549M [00:03<00:08, 48.4MB/s]     25%|██▌       | 137M/549M [00:04<00:11, 36.5MB/s]     27%|██▋       | 147M/549M [00:04<00:13, 30.8MB/s]     30%|██▉       | 162M/549M [00:04<00:10, 37.5MB/s]     31%|███       | 170M/549M [00:04<00:08, 43.0MB/s]     33%|███▎      | 183M/549M [00:05<00:07, 46.3MB/s]     35%|███▍      | 191M/549M [00:05<00:07, 48.5MB/s]     36%|███▋      | 200M/549M [00:05<00:06, 53.0MB/s]     38%|███▊      | 207M/549M [00:05<00:06, 56.1MB/s]     39%|███▉      | 213M/549M [00:05<00:06, 51.4MB/s]     41%|████      | 225M/549M [00:05<00:06, 52.6MB/s]     42%|████▏     | 231M/549M [00:05<00:05, 54.4MB/s]     44%|████▍     | 242M/549M [00:05<00:04, 66.5MB/s]     46%|████▌     | 252M/549M [00:06<00:04, 60.6MB/s]     47%|████▋     | 259M/549M [00:06<00:05, 54.9MB/s]     50%|█████     | 275M/549M [00:06<00:04, 65.9MB/s]     51%|█████▏    | 282M/549M [00:06<00:04, 54.1MB/s]     54%|█████▍    | 299M/549M [00:06<00:03, 75.9MB/s]     56%|█████▌    | 308M/549M [00:07<00:04, 51.5MB/s]     59%|█████▉    | 326M/549M [00:07<00:03, 58.2MB/s]     61%|██████▏   | 336M/549M [00:07<00:03, 62.5MB/s]     64%|██████▍   | 351M/549M [00:07<00:02, 71.4MB/s]     65%|██████▌   | 359M/549M [00:07<00:02, 67.6MB/s]     67%|██████▋   | 367M/549M [00:08<00:03, 56.9MB/s]     70%|██████▉   | 382M/549M [00:08<00:02, 74.0MB/s]     71%|███████▏  | 391M/549M [00:08<00:03, 52.2MB/s]     74%|███████▍  | 408M/549M [00:08<00:01, 72.6MB/s]     76%|███████▋  | 419M/549M [00:08<00:02, 52.1MB/s]     79%|███████▉  | 435M/549M [00:09<00:01, 64.0MB/s]     81%|████████  | 444M/549M [00:09<00:01, 56.4MB/s]     82%|████████▏ | 451M/549M [00:09<00:01, 58.4MB/s]     84%|████████▍ | 462M/549M [00:09<00:01, 63.8MB/s]     86%|████████▌ | 470M/549M [00:09<00:01, 59.1MB/s]     88%|████████▊ | 483M/549M [00:09<00:00, 73.3MB/s]     90%|████████▉ | 492M/549M [00:09<00:00, 75.8MB/s]     91%|█████████▏| 502M/549M [00:10<00:00, 77.8MB/s]     93%|█████████▎| 511M/549M [00:10<00:00, 65.9MB/s]     94%|█████████▍| 518M/549M [00:10<00:00, 63.8MB/s]     97%|█████████▋| 533M/549M [00:10<00:00, 67.2MB/s]     99%|█████████▊| 542M/549M [00:10<00:00, 60.7MB/s]    100%|██████████| 549M/549M [00:10<00:00, 50.6MB/s]
    Downloading...
    From: https://drive.google.com/uc?id=1-AAkBUXykxXG3Ve20jPk43co-m3f9ZWB
    To: /home/runner/work/docs/docs/.cache/pooch/tmpun_lducs
      0%|          | 0.00/6.72M [00:00<?, ?B/s]     16%|█▌        | 1.05M/6.72M [00:00<00:00, 9.33MB/s]    100%|██████████| 6.72M/6.72M [00:00<00:00, 33.7MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 51-56

Collect data together for napari
----------------------------------
 We will loop through all the images in order to prepare the necessary data structure for napari

 These variables are going to contain coordinates, displacements and lengths (for colouring vectors) for all timesteps

.. GENERATED FROM PYTHON SOURCE LINES 56-114

.. code-block:: Python

    coords_all = []
    disps_all = []
    lengths_all = []

    for t, tracking_file in enumerate(tracking_files):
        # load the indicator for convergence
        returnStatus = np.genfromtxt(tracking_file, skip_header=1, usecols=(19))

        # Load coords and displacements, keeping only converged results (returnStatus==2)
        coords = np.genfromtxt(tracking_file, skip_header=1, usecols=(1,2,3))[returnStatus==2]
        disps = np.genfromtxt(tracking_file, skip_header=1, usecols=(4,5,6))[returnStatus==2]

        # Compute lengths in order to colour vectors
        lengths = np.linalg.norm(disps, axis=1)

        # Prepend an extra dimension to coordinates to place them in time, and fill it with the incremental t
        coords = np.hstack([np.ones((coords.shape[0],1))*t, coords])
        # Preprend zeros to the displacements (the "end" of the vector), since they do not displace through time
        disps = np.hstack([np.zeros((disps.shape[0],1)), disps])

        # Add to lists
        coords_all.append(coords)
        disps_all.append(disps)
        lengths_all.append(lengths)

    # Concatenate into arrays
    coords_all = np.concatenate(coords_all)
    disps_all = np.concatenate(disps_all)
    lengths_all = np.concatenate(lengths_all)
    # Stack this into an array of size N (individual points) x 2 (vector start and length) x 4 (tzyx)
    coords_displacements_all = np.stack([coords_all, disps_all], axis=1)

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        greys,
        contrast_limits=[15000, 50000],
        rendering="attenuated_mip",
        attenuation=0.333
    )

    viewer.add_vectors(
      coords_displacements_all,
      vector_style='arrow',
      length=1,
      properties={'disp_norm': lengths_all},
      edge_colormap='plasma',
      edge_width=3,
      out_of_slice_display=True,
    )

    viewer.camera.angles = (0,0,-97)
    viewer.camera.orientation = ('away','up','right')
    viewer.dims.current_step = (11,199, 124, 124)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()



.. image-sg:: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :alt: 3D vectors through time
   :srcset: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :class: sphx-glr-single-img






.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 28.115 seconds)


.. _sphx_glr_download_gallery_3D_vectors_through_time.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3D_vectors_through_time.ipynb <3D_vectors_through_time.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3D_vectors_through_time.py <3D_vectors_through_time.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 3D_vectors_through_time.zip <3D_vectors_through_time.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
