0.8.0/_sources/gallery/3D_vectors_through_time.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/3D_vectors_through_time.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_3D_vectors_through_time.py:


3D vector field and image across time
=====================================

This example is from a mechanical test on a granular material, where multiple 3D volume have been acquired using x-ray tomography during axial loading.
We have used [`spam`](https://www.spam-project.dev/) to label individual particles (with watershed and some tidying up manually), and these particles are tracked through time with 3D "discrete" volume correlation *incrementally*:
t0 → t1 and then t1 → t2.
Although we're also measuring rotations (and strains), but here we're interested to visualise the displacement field on top of the image to spot tracking errors.

.. tags:: visualization-nD

.. GENERATED FROM PYTHON SOURCE LINES 12-19

.. code-block:: Python


    import numpy as np
    import pooch
    import tifffile

    import napari








.. GENERATED FROM PYTHON SOURCE LINES 20-29

Input data
-----------

Input data are therefore:
  - A series of 3D greyscale images
  - A series of measured transformations between subsequent pairs of images
  - We also have consistent labels through time which could also be visualised but are not here

Let's download it!

.. GENERATED FROM PYTHON SOURCE LINES 29-50

.. code-block:: Python


    grey_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/grey.zip",
        known_hash="md5:760be2bad68366872111410776563760",
        processor=pooch.Unzip(),
        progressbar=True
    ))

    # Load individual 3D images as a 4D with a list comprehension, skipping last one
    # result is a T, Z, Y, X 16-bit array
    greys = np.array([tifffile.imread(grey_file) for grey_file in grey_files[0:-1]])

    # load incremental TSV tracking files from spam-ddic, [::2] is to skip VTK files also in folder
    tracking_files = sorted(pooch.retrieve(
        "doi:10.5281/zenodo.17668709/ddic.zip",
        known_hash="md5:2d7c6a052f53b4a827ff4e4585644fac",
        processor=pooch.Unzip(),
        progressbar=True
    ))[::2]






.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    Downloading...
    From (original): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ
    From (redirected): https://drive.google.com/uc?id=1UZEoOtHMMeJMXVoWr6IZraZnvQe8ExNJ&confirm=t&uuid=3656ba1b-20f9-4254-ab13-f9ee233a8724
    To: /home/runner/work/docs/docs/.cache/pooch/tmpzdwh0yhl
      0%|          | 0.00/549M [00:00<?, ?B/s]      1%|          | 4.72M/549M [00:00<00:31, 17.1MB/s]      2%|▏         | 9.44M/549M [00:00<00:20, 26.9MB/s]      3%|▎         | 17.8M/549M [00:00<00:11, 45.3MB/s]      4%|▍         | 23.6M/549M [00:00<00:15, 33.4MB/s]      7%|▋         | 36.2M/549M [00:00<00:12, 42.0MB/s]      8%|▊         | 42.5M/549M [00:01<00:12, 40.5MB/s]      9%|▊         | 47.7M/549M [00:01<00:11, 42.3MB/s]     10%|█         | 56.6M/549M [00:01<00:09, 52.1MB/s]     11%|█▏        | 62.9M/549M [00:01<00:15, 30.8MB/s]     13%|█▎        | 71.8M/549M [00:02<00:14, 33.2MB/s]     15%|█▌        | 82.8M/549M [00:02<00:10, 45.4MB/s]     16%|█▋        | 89.7M/549M [00:02<00:15, 29.8MB/s]     18%|█▊        | 98.6M/549M [00:02<00:12, 36.7MB/s]     19%|█▉        | 104M/549M [00:02<00:12, 34.5MB/s]      20%|█▉        | 110M/549M [00:03<00:14, 30.8MB/s]     22%|██▏       | 120M/549M [00:03<00:10, 42.3MB/s]     23%|██▎       | 126M/549M [00:03<00:10, 40.7MB/s]     24%|██▍       | 131M/549M [00:03<00:11, 36.5MB/s]     26%|██▌       | 143M/549M [00:03<00:07, 51.3MB/s]     27%|██▋       | 149M/549M [00:04<00:13, 28.6MB/s]     29%|██▉       | 158M/549M [00:04<00:10, 36.9MB/s]     30%|███       | 165M/549M [00:04<00:10, 37.0MB/s]     31%|███▏      | 172M/549M [00:04<00:08, 42.8MB/s]     32%|███▏      | 178M/549M [00:04<00:11, 31.5MB/s]     34%|███▍      | 187M/549M [00:05<00:11, 30.9MB/s]     36%|███▌      | 198M/549M [00:05<00:08, 40.7MB/s]     37%|███▋      | 203M/549M [00:05<00:08, 39.1MB/s]     38%|███▊      | 209M/549M [00:05<00:09, 35.8MB/s]     40%|████      | 221M/549M [00:06<00:11, 28.4MB/s]     41%|████▏     | 226M/549M [00:06<00:10, 31.9MB/s]     43%|████▎     | 238M/549M [00:06<00:07, 40.6MB/s]     45%|████▍     | 246M/549M [00:06<00:06, 47.4MB/s]     46%|████▌     | 253M/549M [00:07<00:10, 28.8MB/s]     47%|████▋     | 260M/549M [00:07<00:08, 34.0MB/s]     49%|████▉     | 271M/549M [00:07<00:06, 43.4MB/s]     51%|█████     | 277M/549M [00:07<00:06, 44.1MB/s]     52%|█████▏    | 283M/549M [00:07<00:07, 37.9MB/s]     53%|█████▎    | 293M/549M [00:07<00:05, 48.8MB/s]     55%|█████▍    | 299M/549M [00:08<00:07, 31.5MB/s]     56%|█████▌    | 307M/549M [00:08<00:06, 38.5MB/s]     57%|█████▋    | 313M/549M [00:08<00:07, 29.7MB/s]     58%|█████▊    | 321M/549M [00:08<00:06, 37.1MB/s]     60%|█████▉    | 327M/549M [00:08<00:06, 34.4MB/s]     60%|██████    | 331M/549M [00:09<00:05, 36.6MB/s]     62%|██████▏   | 338M/549M [00:09<00:06, 34.5MB/s]     63%|██████▎   | 346M/549M [00:09<00:04, 42.8MB/s]     64%|██████▍   | 352M/549M [00:09<00:04, 43.4MB/s]     65%|██████▌   | 359M/549M [00:09<00:06, 30.7MB/s]     67%|██████▋   | 366M/549M [00:10<00:05, 36.3MB/s]     68%|██████▊   | 374M/549M [00:10<00:05, 30.8MB/s]     69%|██████▉   | 380M/549M [00:10<00:04, 35.7MB/s]     71%|███████   | 388M/549M [00:10<00:04, 37.2MB/s]     73%|███████▎  | 399M/549M [00:10<00:03, 48.9MB/s]     74%|███████▍  | 405M/549M [00:11<00:04, 34.6MB/s]     76%|███████▌  | 417M/549M [00:11<00:02, 48.3MB/s]     77%|███████▋  | 425M/549M [00:11<00:03, 39.8MB/s]     79%|███████▉  | 435M/549M [00:12<00:03, 29.4MB/s]     82%|████████▏ | 447M/549M [00:12<00:02, 40.8MB/s]     83%|████████▎ | 454M/549M [00:12<00:02, 41.4MB/s]     84%|████████▍ | 460M/549M [00:12<00:02, 34.9MB/s]     86%|████████▌ | 471M/549M [00:12<00:01, 45.8MB/s]     87%|████████▋ | 478M/549M [00:12<00:01, 44.1MB/s]     88%|████████▊ | 484M/549M [00:12<00:01, 45.9MB/s]     89%|████████▉ | 490M/549M [00:13<00:01, 37.4MB/s]     91%|█████████▏| 502M/549M [00:13<00:00, 52.5MB/s]     93%|█████████▎| 509M/549M [00:13<00:00, 43.3MB/s]     94%|█████████▍| 517M/549M [00:13<00:00, 51.6MB/s]     96%|█████████▌| 525M/549M [00:14<00:00, 26.0MB/s]     97%|█████████▋| 534M/549M [00:14<00:00, 33.5MB/s]     99%|█████████▉| 544M/549M [00:14<00:00, 42.3MB/s]    100%|██████████| 549M/549M [00:14<00:00, 37.7MB/s]
    Downloading...
    From: https://drive.google.com/uc?id=1-AAkBUXykxXG3Ve20jPk43co-m3f9ZWB
    To: /home/runner/work/docs/docs/.cache/pooch/tmpxmr9u9p_
      0%|          | 0.00/6.72M [00:00<?, ?B/s]     16%|█▌        | 1.05M/6.72M [00:00<00:00, 9.79MB/s]    100%|██████████| 6.72M/6.72M [00:00<00:00, 34.6MB/s]    100%|██████████| 6.72M/6.72M [00:00<00:00, 30.9MB/s]




.. GENERATED FROM PYTHON SOURCE LINES 51-56

Collect data together for napari
----------------------------------
 We will loop through all the images in order to prepare the necessary data structure for napari

 These variables are going to contain coordinates, displacements and lengths (for colouring vectors) for all timesteps

.. GENERATED FROM PYTHON SOURCE LINES 56-114

.. code-block:: Python

    coords_all = []
    disps_all = []
    lengths_all = []

    for t, tracking_file in enumerate(tracking_files):
        # load the indicator for convergence
        returnStatus = np.genfromtxt(tracking_file, skip_header=1, usecols=(19))

        # Load coords and displacements, keeping only converged results (returnStatus==2)
        coords = np.genfromtxt(tracking_file, skip_header=1, usecols=(1,2,3))[returnStatus==2]
        disps = np.genfromtxt(tracking_file, skip_header=1, usecols=(4,5,6))[returnStatus==2]

        # Compute lengths in order to colour vectors
        lengths = np.linalg.norm(disps, axis=1)

        # Prepend an extra dimension to coordinates to place them in time, and fill it with the incremental t
        coords = np.hstack([np.ones((coords.shape[0],1))*t, coords])
        # Preprend zeros to the displacements (the "end" of the vector), since they do not displace through time
        disps = np.hstack([np.zeros((disps.shape[0],1)), disps])

        # Add to lists
        coords_all.append(coords)
        disps_all.append(disps)
        lengths_all.append(lengths)

    # Concatenate into arrays
    coords_all = np.concatenate(coords_all)
    disps_all = np.concatenate(disps_all)
    lengths_all = np.concatenate(lengths_all)
    # Stack this into an array of size N (individual points) x 2 (vector start and length) x 4 (tzyx)
    coords_displacements_all = np.stack([coords_all, disps_all], axis=1)

    viewer = napari.Viewer(ndisplay=3)

    viewer.add_image(
        greys,
        contrast_limits=[15000, 50000],
        rendering="attenuated_mip",
        attenuation=0.333
    )

    viewer.add_vectors(
      coords_displacements_all,
      vector_style='arrow',
      length=1,
      properties={'disp_norm': lengths_all},
      edge_colormap='plasma',
      edge_width=3,
      out_of_slice_display=True,
    )

    viewer.camera.angles = (0,0,-97)
    viewer.camera.orientation = ('away','up','right')
    viewer.dims.current_step = (11,199, 124, 124)
    viewer.fit_to_view()

    if __name__ == '__main__':
        napari.run()



.. image-sg:: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :alt: 3D vectors through time
   :srcset: /gallery/images/sphx_glr_3D_vectors_through_time_001.png
   :class: sphx-glr-single-img


.. rst-class:: sphx-glr-script-out

 .. code-block:: none

    /home/runner/work/docs/docs/.venv/lib/python3.12/site-packages/napari/_qt/qt_event_loop.py:50: UserWarning: System theme detection requires a Qt6 backend. Please switch to PyQt6 or PySide6 to use it.
      theme_type=get_system_theme(),





.. rst-class:: sphx-glr-timing

   **Total running time of the script:** (0 minutes 31.712 seconds)


.. _sphx_glr_download_gallery_3D_vectors_through_time.py:

.. only:: html

  .. container:: sphx-glr-footer sphx-glr-footer-example

    .. container:: sphx-glr-download sphx-glr-download-jupyter

      :download:`Download Jupyter notebook: 3D_vectors_through_time.ipynb <3D_vectors_through_time.ipynb>`

    .. container:: sphx-glr-download sphx-glr-download-python

      :download:`Download Python source code: 3D_vectors_through_time.py <3D_vectors_through_time.py>`

    .. container:: sphx-glr-download sphx-glr-download-zip

      :download:`Download zipped: 3D_vectors_through_time.zip <3D_vectors_through_time.zip>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
